# python-upskill-feb-2026-maria

./: .env.example  PHASE4_NOTES.md  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a6709b0dc17e_initial_migration.py
app/: main.py
app/api/: auth.py  health.py  orders.py  products.py
app/core/: config.py  dependencies.py  exception_handlers.py
app/db/: base.py  connection.py  models.py
app/repositories/: order.py  product.py  user.py
app/schemas/: auth.py  order.py  product.py
app/seeds/: products.py
app/services/: auth.py  order.py  product.py
app/utils/: logger.py  security.py
tests/: conftest.py  test_auth_service.py  test_order_flow.py  test_schemas.py  test_utils.py
