[project]
name = "order-management-system"
version = "0.1.0"
description = "Simple Order Management System REST API — built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "argon2-cffi",
    "asyncpg",
    "fastapi>=0.115.0",
    "psycopg2-binary",
    "pydantic[email]",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]",
    "python-multipart",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]
